Refactor: tidy JNA structs and test cleanup paths