@@ -2,7 +2,6 @@ package io.github.vkkkv.rimine.jni;
 
 import com.sun.jna.Pointer;
 import com.sun.jna.Structure;
-import java.util.Arrays;
 import java.util.List;
 
 @Structure.FieldOrder({"text", "comment", "reserved"})
@@ -22,6 +21,6 @@ public class RimeCandidate extends Structure {
 
   @Override
   protected List<String> getFieldOrder() {
-    return Arrays.asList("text", "comment", "reserved");
+    return List.of("text", "comment", "reserved");
   }
 }
