@@ -2,7 +2,6 @@ package io.github.vkkkv.rimine.jni;
 
 import com.sun.jna.Pointer;
 import com.sun.jna.Structure;
-import java.util.Arrays;
 import java.util.List;
 
 @Structure.FieldOrder({"data_size", "composition", "menu", "commit_text_preview", "select_labels"})
@@ -15,11 +14,13 @@ public class RimeContext extends Structure {
 
   public RimeContext() {
     super();
-    this.data_size = this.size();
+    // Mimic RIME_STRUCT_INIT: data_size = sizeof(Type) - sizeof(data_size)
+    int sz = this.size();
+    this.data_size = sz - 4; // sizeof(int) = 4
   }
 
   @Override
   protected List<String> getFieldOrder() {
-    return Arrays.asList("data_size", "composition", "menu", "commit_text_preview", "select_labels");
+    return List.of("data_size", "composition", "menu", "commit_text_preview", "select_labels");
   }
 }
