@@ -2,7 +2,6 @@ package io.github.vkkkv.rimine.jni;
 
 import com.sun.jna.Pointer;
 import com.sun.jna.Structure;
-import java.util.Arrays;
 import java.util.List;
 
 @Structure.FieldOrder({"size", "list"})
@@ -12,6 +11,6 @@ public class RimeSchemaList extends Structure {
 
   @Override
   protected List<String> getFieldOrder() {
-    return Arrays.asList("size", "list");
+    return List.of("size", "list");
   }
 }
